# crawling

./: .env.example  .gitignore  README.md  crawl_details.py  docker-compose.yaml  docker-compose.yml  emails.db  failed_emails.txt  guide.md  migrate_csv_to_sqlite.py  naver-api  naver-details  naver-details.bat  naver-email  naver-email.bat  naver-scraper  naver-scraper-api.bat  naver-scraper.bat  naver-talktalk  naver-talktalk.bat  pyproject.toml  requirements.txt  scrape_naver.py  setup.py  test_emails.txt  update_email_status.py
app/: Dockerfile  mailing.py  main.py
crawlers/: __init__.py  detail_crawler.py  search_crawler.py
data/: crawler_data.db
e2e/: package-lock.json  package.json
e2e/tests/: 미존재사이트.spec.ts  비공개사이트.spec.ts
src/: __init__.py  config.py  db_storage.py  detail_crawler.py  email_checker.py  email_sender.py  email_sender_0423.py  email_sender_0424.py  email_sender_0425.py  email_sender_0425_00.py  email_sender_older.py  email_status_db.py  extract_failed_emails.py  keywords.py  main.py  main_api.py  naver_api.py  personalized_email_sender.py  scraper.py  storage.py  talktalk_sender.py  update_email_status.py  update_title.py
templates/: email_template.html  email_template.txt
templates_backup/: email_template.html
